支持正常运行